--- a/css/style.css
+++ b/css/style.css
@@ -55,13 +55,23 @@ header a {
     bottom: 80px;
     left: 40px;
     width: 50%;
+    margin: 30px;
 }
 
 .spot-description > h1 {
     font-weight: 100;
-    line-height: 1.9rem;
+    line-height: 30px;
 }
 
-.spot-description > h4 {
+#skills {
+    margin: 30px 0;
+}
+
+.subtitle {
     font-weight: 100;
+    font-size: 16px;
+}
+
+#skills h2 {
+    font-size: 30px;
 }
