--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ header a {
     line-height: 30px;
 }
 
-.skills-title {
+#skills > .skills-title {
     margin: 50px 0;
 }
 
@@ -80,18 +80,30 @@ header a {
     height: 1000px;
 }
 
-.col {
+.col-center {
+    width: calc(50% - 20px);
+    margin: 0 20px;
+}
+.col-side {
+    width: 25%;
     height: 800px;
     float: left;
 }
 
-.col-side {
-    width: 25%;
-    background-color: red;
+.col .first {
+    background-image: url(../img/img-1.jpg);
 }
 
-.col-center {
-    width: calc(50% - 20px);
-    margin: 0 10px;
-    background-color: green;
+.col .center {
+    background-image: url(../img/banner-2.jpg);
+}
+
+.col .last {
+    background-image: url(../img/img-3.jpg);
+}
+
+.col .image {
+    background-position: cover;
+    height: 300px;
+    background-repeat: no-repeat;
 }
