--- a/css/style.css
+++ b/css/style.css
@@ -77,33 +77,52 @@ header a {
 }
 
 #grid {
-    height: 1000px;
+    min-height: 500px;
+}
+
+.col > h5 {
+    margin: 20px 0;
 }
 
 .col-center {
-    width: calc(50% - 20px);
+    width: calc(60% - 40px);
     margin: 0 20px;
+    float: left;
 }
 .col-side {
-    width: 25%;
-    height: 800px;
+    width: 20%;
     float: left;
 }
 
 .col .first {
-    background-image: url(../img/img-1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2)),  url(../img/img-1.jpg);
 }
 
 .col .center {
-    background-image: url(../img/banner-2.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2)),  url(../img/banner-2.jpg);
 }
 
 .col .last {
-    background-image: url(../img/img-3.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2)),  url(../img/img-3.jpg);
 }
 
 .col .image {
     background-position: cover;
-    height: 300px;
+    height: 250px;
+    background-position: center;
     background-repeat: no-repeat;
+    border-radius: 10px;
+}
+
+footer {
+    margin-top: 20px;
+    text-align: center;
+}
+
+footer span {
+    color: red;
+    font-size: 2rem;
 }
